--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 flask==1.1.2
-Flask-SocketIO==4.3.2
 beautifulsoup4==4.6.0
 lxml==4.6.1
-urllib3==1.25.11
-chardet==3.0.4
-PyMySQL==0.10.1
-html5lib==1.1
-lxml==4.6.1
+matplotlib==3.3.2
+pandas==1.1.3
+pyodbc==4.0.0
+requests==2.24.0
+scipy==1.5.2
+seaborn==0.11.0
+SQLAlchemy==1.3.20
+xmltodict==0.12.0
