--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ beautifulsoup4==4.6.0
 lxml==4.6.1
 matplotlib==3.3.2
 pandas==1.1.3
-pyodbc==4.0.0-unsupported
+pyodbc==4.0.0
 requests==2.24.0
 scipy==1.5.2
 seaborn==0.11.0
